<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/grid_toggle"
        android:icon="@drawable/grid_icon"
        app:showAsAction="always" />

    <item android:id="@+id/search"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
</menu>