...
        android:id="@+id/drag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drag_indicator">

        <TextView
            android:id="@+id/panelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bottom_border"
            android:text="@string/default_meme_name"
...
