<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/export_meme"
        android:title="@string/title_export_icon"
        android:icon="@drawable/export_icon"
        app:showAsAction="always|withText" />

</menu>