<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore_icon"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_studio"
        android:icon="@drawable/studio_icon"
        android:title="@string/title_studio" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favourites_icon"
        android:title="@string/title_favourites" />

</menu>

